--- a/laku/laku.html
+++ b/laku/laku.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Link Shopee Pagination</title>
 <style>
-  body { font-family: Arial, sans-serif; margin: 15px; max-width: 900px; margin-left:auto; margin-right:auto; }
+  body { font-family: Arial, sans-serif; margin: 15px; max-width: 900px; margin-inline:auto; }
   h2,h3 { font-size: 1.2rem; margin-bottom: 8px; }
   textarea, select { width:100%; box-sizing:border-box; font-size:1rem; padding:8px; border-radius:6px; border:1px solid #ccc; resize:vertical; }
   textarea { height:150px; }
@@ -82,23 +82,39 @@ const inputLinksEl = document.getElementById('inputLinks');
 const statsEl = document.getElementById('stats');
 const outputEl = document.getElementById('output');
 const paginationEl = document.getElementById('pagination');
+const dropdownEl = document.getElementById('fileDropdown');
 
 /* Restore localStorage */
 window.addEventListener('load', () => {
   const savedInput = localStorage.getItem('inputList');
+  const savedDropdown = localStorage.getItem('selectedFile');
+  const savedPage = parseInt(localStorage.getItem('currentPage') || '1');
+
   if (savedInput) inputLinksEl.value = savedInput;
+  if (savedDropdown) dropdownEl.value = savedDropdown;
   processLinks();
+
+  // Setelah proses selesai baru set halaman terakhir
+  if (savedPage && savedPage <= allPages.length) {
+    currentPage = savedPage;
+    showPage(currentPage);
+  }
 });
 
-/* Save input automatically */
+/* Simpan input otomatis */
 inputLinksEl.addEventListener('input', () => {
   localStorage.setItem('inputList', inputLinksEl.value);
   processLinks();
 });
 
+/* Simpan dropdown otomatis */
+dropdownEl.addEventListener('change', () => {
+  localStorage.setItem('selectedFile', dropdownEl.value);
+});
+
 /* Tombol ambil file dropdown */
 document.getElementById('ambilFileListLinksBtn').addEventListener('click', async () => {
-  const selectedFile = document.getElementById('fileDropdown').value;
+  const selectedFile = dropdownEl.value;
   if (!selectedFile) { alert('Pilih file TXT dulu!'); return; }
   try {
     const res = await fetch(selectedFile + '?t=' + Date.now(), { cache: 'no-store' });
@@ -113,7 +129,7 @@ document.getElementById('ambilFileListLinksBtn').addEventListener('click', async
   }
 });
 
-/* Tombol clear, copy, hapus duplikat */
+/* Tombol lain */
 document.getElementById('clearInputLinksBtn').addEventListener('click', () => {
   inputLinksEl.value = '';
   localStorage.removeItem('inputList');
@@ -143,7 +159,8 @@ function processLinks() {
   for (let i = 0; i < unique.length; i += MAX_PER_PAGE) {
     allPages.push(unique.slice(i, i + MAX_PER_PAGE));
   }
-  currentPage = Math.min(currentPage, allPages.length) || 1;
+  if (currentPage > allPages.length) currentPage = 1;
+
   renderStats(raw.length, unique.length, dup);
   renderPagination();
   showPage(currentPage);
@@ -160,6 +177,7 @@ function renderStats(total, uniq, dup) {
 function showPage(page) {
   if (!allPages.length) { outputEl.style.display = 'none'; return; }
   currentPage = page;
+  localStorage.setItem('currentPage', page);
   outputEl.innerHTML = allPages[page - 1]
     .map(l => `<a href="${l}" target="_blank">${l}</a>`).join('');
   outputEl.style.display = 'block';
