--- a/laku/laku.html
+++ b/laku/laku.html
@@ -44,7 +44,7 @@
 <body>
 
 <h1>Produk Laku di Live MadGazan</h1>
-<h2>Manajemen Link Shopee Akun 1</h2>
+<h2>Manajemen Shopee Live</h2>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
 
